name:          compendium-client
version:       0.2.1.1
synopsis:      Client for the Compendium schema server
description:
  Client for the <https://github.com/higherkindness/compendium Compendium> schema server

license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:      Network
build-type:    Simple
cabal-version: >=1.10
homepage:      https://higherkindness.io/mu-haskell/
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:  Compendium.Client
  build-depends:
      aeson              >=1.4   && <2
    , base               >=4.12  && <5
    , http-client        >=0.6.4 && <0.7
    , language-protobuf  >=1.0.1 && <1.1
    , megaparsec         >=8     && <10
    , servant            >=0.16  && <0.19
    , servant-client     >=0.16  && <0.19
    , text               >=1.2   && <2

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances
