name:          mu-graphql
version:       0.3.0.0
synopsis:      GraphQL support for Mu
description:   GraphQL servers and clients for Mu-Haskell
cabal-version: >=1.10
license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2020 <http://47deg.com 47 Degrees>
category:      Network
build-type:    Simple
homepage:      https://higherkindness.io/mu-haskell/
bug-reports:   https://github.com/higherkindness/mu-haskell/issues
data-files:    exe/*.graphql

library
  exposed-modules:
    Mu.GraphQL.Annotations
    Mu.GraphQL.Quasi
    Mu.GraphQL.Server

  other-modules:
    Mu.GraphQL.Quasi.LostParser
    Mu.GraphQL.Query.Definition
    Mu.GraphQL.Query.Introspection
    Mu.GraphQL.Query.Parse
    Mu.GraphQL.Query.Run
    Mu.GraphQL.Subscription.Protocol

  -- other-extensions:
  build-depends:
      aeson
    , async
    , attoparsec
    , base                  >=4.12 && <5
    , bytestring
    , conduit
    , graphql-parser
    , http-types
    , list-t
    , mtl
    , mu-rpc
    , mu-schema
    , parsers
    , scientific
    , sop-core
    , stm
    , stm-chans
    , stm-conduit
    , stm-containers
    , template-haskell
    , text
    , unordered-containers
    , uuid
    , wai
    , wai-websockets
    , warp
    , warp-tls
    , websockets

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances

executable library-graphql
  main-is:          Main.hs
  hs-source-dirs:   exe
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      base        >=4.12    && <5
    , conduit
    , mu-graphql
    , mu-rpc
    , mu-schema
    , regex-tdfa  >=1.3.1.0
    , text
    , wai-extra
    , warp
