name:          mu-graphql
version:       0.4.0.0
synopsis:      GraphQL support for Mu
description:   GraphQL servers and clients for Mu-Haskell
cabal-version: >=1.10
license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2020 <http://47deg.com 47 Degrees>
category:      Network
build-type:    Simple
homepage:      https://higherkindness.io/mu-haskell/
bug-reports:   https://github.com/higherkindness/mu-haskell/issues
data-files:    exe/*.graphql

library
  exposed-modules:
    Mu.GraphQL.Annotations
    Mu.GraphQL.Quasi
    Mu.GraphQL.Server

  other-modules:
    Mu.GraphQL.Quasi.LostParser
    Mu.GraphQL.Query.Definition
    Mu.GraphQL.Query.Introspection
    Mu.GraphQL.Query.Parse
    Mu.GraphQL.Query.Run
    Mu.GraphQL.Subscription.Protocol

  build-depends:
      aeson                 >=1.5.2   && <1.6
    , async                 >=2.2.2   && <2.3
    , attoparsec            >=0.13.2  && <0.14
    , base                  >=4.12    && <5
    , bytestring            >=0.10.10 && <0.11
    , conduit               >=1.3.2   && <1.4
    , graphql-parser
    , http-types            >=0.12.3  && <0.13
    , list-t                >=1.0.4   && <1.1
    , mtl                   >=2.2.2   && <2.3
    , mu-rpc                >=0.4.0
    , mu-schema             >=0.4.0
    , parsers               >=0.12.10 && <0.13
    , scientific            >=0.3.6   && <0.4
    , sop-core              >=0.5.0   && <0.6
    , stm                   >=2.5.0   && <2.6
    , stm-chans             >=3.0.0   && <3.1
    , stm-conduit           >=4.0.1   && <4.1
    , stm-containers        >=1.1.0   && <1.2
    , template-haskell      >=2.15.0  && <2.16
    , text                  >=1.2.4   && <1.3
    , unordered-containers  >=0.2.11  && <0.3
    , uuid                  >=1.3.13  && <1.4
    , wai                   >=3.2.2   && <3.3
    , wai-websockets        >=3.0.1   && <3.1
    , warp                  >=3.3.13  && <3.4
    , warp-tls              >=3.3.0   && <3.4
    , websockets            >=0.12.7  && <0.13

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances

executable library-graphql
  main-is:          Main.hs
  hs-source-dirs:   exe
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      base        >=4.12   && <5
    , conduit     >=1.3.2  && <1.4
    , mu-graphql  >=0.4
    , mu-rpc      >=0.4
    , mu-schema   >=0.4
    , regex-tdfa  >=1.3.1  && <1.4
    , text        >=1.2.4  && <1.3
    , wai-extra   >=3.0.29 && <3.1
    , warp        >=3.3.13 && <3.4
