name:          mu-graphql
version:       0.5.0.3
synopsis:      GraphQL support for Mu
description:   GraphQL servers and clients for Mu-Haskell
cabal-version: >=1.10
license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2020 <http://47deg.com 47 Degrees>
category:      Network
build-type:    Simple
homepage:      https://higherkindness.io/mu-haskell/
bug-reports:   https://github.com/higherkindness/mu-haskell/issues
data-files:    exe/*.graphql

library
  exposed-modules:
    Mu.GraphQL.Annotations
    Mu.GraphQL.Quasi
    Mu.GraphQL.Server

  other-modules:
    Mu.GraphQL.Quasi.LostParser
    Mu.GraphQL.Query.Definition
    Mu.GraphQL.Query.Introspection
    Mu.GraphQL.Query.Parse
    Mu.GraphQL.Query.Run
    Mu.GraphQL.Subscription.Protocol

  build-depends:
      aeson                 >=1.4   && <2
    , async                 >=2.2   && <3
    , base                  >=4.12  && <5
    , bytestring            >=0.10  && <0.11
    , conduit               >=1.3.2 && <2
    , foldl                 >=1.4   && <2
    , graphql               >=1.0
    , http-types            >=0.12  && <0.13
    , list-t                >=1.0   && <2
    , megaparsec            >=8     && <10
    , mtl                   >=2.2   && <2.3
    , mu-rpc                >=0.5   && <0.6
    , mu-schema             >=0.3   && <0.4
    , parsers               >=0.12  && <0.13
    , scientific            >=0.3   && <0.4
    , sop-core              >=0.5   && <0.6
    , stm                   >=2.5   && <3
    , stm-chans             >=3     && <4
    , stm-conduit           >=4     && <5
    , stm-containers        >=1.1   && <2
    , template-haskell      >=2.14  && <2.17
    , text                  >=1.2   && <1.3
    , unordered-containers  >=0.2   && <0.3
    , uuid                  >=1.3   && <2
    , wai                   >=3.2   && <4
    , wai-websockets        >=3     && <4
    , warp                  >=3.3   && <4
    , warp-tls              >=3.2   && <4
    , websockets            >=0.12  && <0.13

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances

executable library-graphql
  main-is:          Main.hs
  hs-source-dirs:   exe
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:
      base        >=4.12  && <5
    , aeson       >=1.4   && <2
    , conduit     >=1.3.2 && <1.4
    , mu-graphql
    , mu-rpc      >=0.5   && <0.6
    , mu-schema   >=0.3   && <0.4
    , regex-tdfa  >=1.3   && <2
    , text        >=1.2   && <2
    , wai-extra   >=3     && <4
    , warp        >=3.3   && <4
