name:          mu-avro
version:       0.3.0.0
synopsis:      Avro serialization support for Mu microservices
description:
  You can use @mu-avro@ to read AVRO Schema Declarations for mu-haskell

license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:      Network
build-type:    Simple
cabal-version: >=1.10
data-files:    test/avro/*.avsc
homepage:      https://higherkindness.io/mu-haskell/
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:
    Data.Time.Millis
    Mu.Adapter.Avro
    Mu.Quasi.Avro
    Mu.Quasi.Avro.Example

  build-depends:
      aeson
    , avro                  >=0.5.1
    , base                  >=4.12    && <5
    , bytestring
    , containers
    , deepseq
    , language-avro         >=0.1.3.1
    , mu-rpc                >=0.3.0
    , mu-schema             >=0.3.0
    , sop-core
    , tagged
    , template-haskell      >=2.12
    , text
    , time
    , unordered-containers
    , uuid
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances

executable test-avro
  main-is:          Avro.hs
  build-depends:
      avro        >=0.5
    , base        >=4.12  && <5
    , bytestring
    , mu-avro     >=0.3.0
    , mu-schema   >=0.3.0

  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall
