name:          mu-avro
version:       0.4.0.4
synopsis:      Avro serialization support for Mu microservices
description:
  You can use @mu-avro@ to read AVRO Schema Declarations for mu-haskell

license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:      Network
build-type:    Simple
cabal-version: >=1.10
data-files:
  test/avro/*.avsc
  test/avro/*.avdl

homepage:      https://higherkindness.io/mu-haskell/
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:
    Data.Time.Millis
    Mu.Adapter.Avro
    Mu.Quasi.Avro
    Mu.Quasi.Avro.Example

  build-depends:
      aeson                 >=1.4   && <2
    , avro                  >=0.5.1 && <0.6
    , base                  >=4.12  && <5
    , bytestring            >=0.10  && <0.11
    , containers            >=0.6   && <0.7
    , deepseq               >=1.4   && <2
    , language-avro         >=0.1.3 && <0.2
    , mu-rpc                >=0.4   && <0.6
    , mu-schema             >=0.3   && <0.4
    , sop-core              >=0.5.0 && <0.6
    , tagged                >=0.8.6 && <0.9
    , template-haskell      >=2.14  && <2.17
    , text                  >=1.2   && <2
    , time                  >=1.9   && <2
    , transformers          >=0.5   && <0.6
    , unordered-containers  >=0.2   && <0.3
    , uuid                  >=1.3   && <2
    , vector                >=0.12  && <0.13

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances

executable test-avro
  main-is:          Avro.hs
  build-depends:
      avro        >=0.5.1 && <0.6
    , base        >=4.12  && <5
    , bytestring  >=0.10  && <0.11
    , containers  >=0.6   && <0.7
    , mu-avro
    , mu-schema   >=0.3   && <0.4

  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall
