name:               mu-kafka
version:            0.3.0.0
synopsis:           Utilities for interoperation between Mu and Kafka
description:
  This package provides simple interoperation between Mu and Kafka using @hw-kafka-client@

homepage:           https://github.com/higherkindness/mu-haskell
license:            Apache-2.0
license-file:       LICENSE
author:             Alejandro Serrano, Flavio Corpa
maintainer:         alejandro.serrano@47deg.com
copyright:          Copyright © 2020 <http://47deg.com 47 Degrees>
category:           Network
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md
bug-reports:        https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:
    Mu.Kafka.Consumer
    Mu.Kafka.Producer

  other-modules:    Mu.Kafka.Internal
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
      avro              >=0.5.1 && <0.6
    , base              >=4.12  && <5
    , bytestring        >=0.10  && <0.11
    , conduit           >=1.3.2 && <2
    , hw-kafka-client   >=3     && <4
    , hw-kafka-conduit  >=2.7   && <3
    , mu-avro           >=0.4   && <0.5
    , mu-schema         >=0.3   && <0.4
    , resourcet         >=1.2   && <2

  ghc-options:      -Wall
