name:               mu-persistent
version:            0.3.1.0
synopsis:           Utilities for interoperation between Mu and Persistent
description:
  Please see the <https://github.com/higherkindness/mu-haskell/persistent#readme readme file>.

homepage:
  https://github.com/higherkindness/mu-haskell/persistent#readme

license:            Apache-2.0
license-file:       LICENSE
author:             Flavio Corpa, Alejandro Serrano
maintainer:         flavio.corpa@47deg.com
copyright:          Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:           Network
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md
bug-reports:        https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:  Mu.Adapter.Persistent
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
      base          >=4.12 && <5
    , monad-logger  >=0.3  && <0.4
    , mu-schema     ==0.3.*
    , persistent    >=2.10 && <3
    , resourcet     >=1.2  && <2
    , resource-pool >=0.2  && <0.3
    , transformers  >=0.5  && <0.6

  ghc-options:      -Wall
