name:          mu-protobuf
version:       0.4.1.0
synopsis:
  Protocol Buffers serialization and gRPC schema import for Mu microservices

description:
  You can use @mu-protobuf@ to read Protobuf Schema Declarations and services for mu-haskell

license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:      Network
build-type:    Simple
cabal-version: >=1.10
data-files:    test/protobuf/*.proto
homepage:      https://higherkindness.io/mu-haskell/
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:
    Mu.Adapter.ProtoBuf
    Mu.Adapter.ProtoBuf.Via
    Mu.Quasi.GRpc
    Mu.Quasi.ProtoBuf
    Mu.Quasi.ProtoBuf.Example

  build-depends:
      base                    >=4.12  && <5
    , bytestring              >=0.10  && <0.11
    , compendium-client       >=0.2   && <0.3
    , containers              >=0.6   && <0.7
    , http-client             >=0.6   && <0.7
    , http2-grpc-proto3-wire  >=0.1   && <0.2
    , language-protobuf       >=1.0.1 && <2
    , mu-rpc                  >=0.4   && <0.6
    , mu-schema               >=0.3   && <0.4
    , proto3-wire             >=1.1   && <2
    , servant-client-core     >=0.16  && <0.19
    , sop-core                >=0.5   && <0.6
    , template-haskell        >=2.14  && <2.17
    , text                    >=1.2   && <2

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances

executable test-protobuf
  main-is:          ProtoBuf.hs
  build-depends:
      base         >=4.12  && <5
    , bytestring
    , containers   >=0.6   && <0.7
    , mu-protobuf
    , mu-schema    >=0.3.0
    , proto3-wire
    , text

  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-explicit-foralls
