name:          mu-lens
version:       0.3.0.0
synopsis:      Lenses for @mu-schema@ terms
description:
  With @mu-schema@ you can describe schemas using type-level constructs, and derive serializers from those. This package provides convenient access using @lens@es.

license:       Apache-2.0
license-file:  LICENSE
author:        Andre Marianiello
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:      Network
build-type:    Simple
cabal-version: >=1.10
homepage:      https://higherkindness.io/mu-haskell/
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:  Mu.Schema.Lens
  build-depends:
      base         >=4.12 && <5
    , containers
    , lens
    , generic-lens
    , mu-schema
    , mu-rpc
    , sop-core
    , text

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
