name:               mu-rpc
version:            0.5.0.2
synopsis:           Protocol-independent declaration of services and servers.
description:
  Protocol-independent declaration of services and servers for mu-haskell.

license:            Apache-2.0
license-file:       LICENSE
author:             Alejandro Serrano, Flavio Corpa
maintainer:         alejandro.serrano@47deg.com
copyright:          Copyright © 2019-2020 <http://47deg.com 47 Degrees>
cabal-version:      >=1.10
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md
homepage:           https://higherkindness.io/mu-haskell/
bug-reports:        https://github.com/higherkindness/mu-haskell/issues

source-repository head
  type:     git
  location: https://github.com/higherkindness/mu-haskell

library
  exposed-modules:
    Mu.Named
    Mu.Rpc
    Mu.Rpc.Annotations
    Mu.Rpc.Examples
    Mu.Server

  build-depends:
      aeson             >=1.4   && <2
    , base              >=4.12  && <5
    , conduit           >=1.3.2 && <1.4
    , http-types        >=0.12  && <0.13
    , mtl               >=2.2   && <2.3
    , mu-schema         >=0.3   && <0.4
    , sop-core          >=0.5   && <0.6
    , template-haskell  >=2.14  && <2.18
    , text              >=1.2   && <1.3
    , wai               >=3.2   && <4

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fprint-potential-instances
